<resources>
    <string name="app_name">flight</string>
    <string name="iata_departure">IATA Origem</string>
    <string name="iata_destination">IATA Destino</string>
    <string name="departure_date">Data da ida</string>
    <string name="arrival_date">Data da volta</string>
    <string name="number_of_passengers">Quantidade de passageiros</string>
    <string name="search_flight_tickets">Pesquisar passagem</string>
    <string name="filter">Filtrar</string>
    <string name="order">Ordenar</string>
    <string name="empty_state">Não foi encontrado nenhum voo</string>
    <string name="error">Estamos enfrentando problemas, tente novamente.</string>
    <string name="retry">Repetir</string>
    <string name="search_ticket">PESQUISAR PASSAGEM</string>
    <string name="airline">Cia Aérea</string>
    <string name="departure">Partida</string>
    <string name="duration">Duração</string>
    <string name="arrival">Chegada</string>
    <string name="going">Ida</string>
    <string name="returned">Volta</string>
    <string name="no_stop">voo direto</string>
    <string name="stop">paradas</string>

    <string-array name="iata">
        <item>GYN</item>
        <item>RVD</item>
        <item>CLV</item>
        <item>TLZ</item>
        <item>BSB</item>
        <item>AFL</item>
        <item>CGB</item>
        <item>ROO</item>
        <item>OPS</item>
        <item>SMT</item>
        <item>BYO</item>
        <item>CSS</item>
        <item>CGR</item>
        <item>CMG</item>
        <item>DOU</item>
        <item>PBB</item>
        <item>PMG</item>
        <item>TJL</item>
        <item>CZS</item>
        <item>RBR</item>
        <item>MCP</item>
        <item>BAZ</item>
        <item>BCR</item>
        <item>RBB</item>
        <item>CAF</item>
        <item>CIZ</item>
        <item>ERN</item>
        <item>FBA</item>
        <item>HUW</item>
        <item>ITA</item>
        <item>LBR</item>
        <item>MAO</item>
        <item>MNX</item>
        <item>MBZ</item>
        <item>NVP</item>
        <item>PIN</item>
        <item>IRZ</item>
        <item>IPG</item>
        <item>SJL</item>
        <item>OLC</item>
        <item>TBT</item>
        <item>TFF</item>
        <item>ATM</item>
        <item>BEL</item>
        <item>CKS</item>
        <item>MAB</item>
        <item>STM</item>
        <item>PVH</item>
        <item>JPR</item>
        <item>OAL</item>
        <item>BVH</item>
        <item>BVB</item>
        <item>AUX</item>
        <item>GPI</item>
        <item>PMW</item>
        <item>PNB</item>
        <item>APQ</item>
        <item>MCZ</item>
        <item>BRA</item>
        <item>FEC</item>
        <item>IOS</item>
        <item>LEC</item>
        <item>PAV</item>
        <item>BPS</item>
        <item>SSA</item>
        <item>TXF</item>
        <item>VAL</item>
        <item>VDC</item>
        <item>FOR</item>
        <item>JJD</item>
        <item>JDO</item>
        <item>IMP</item>
        <item>SLZ</item>
        <item>CPV</item>
        <item>JPA</item>
        <item>CAU</item>
        <item>FEN</item>
        <item>PNZ</item>
        <item>REC</item>
        <item>SET</item>
        <item>PHB</item>
        <item>THE</item>
        <item>MVF</item>
        <item>NAT</item>
        <item>AJU</item>
        <item>VIX</item>
        <item>CDI</item>
        <item>GUZ</item>
        <item>SBJ</item>
        <item>QAK</item>
        <item>POJ</item>
        <item>CNF</item>
        <item>DIQ</item>
        <item>GVR</item>
        <item>JDF</item>
        <item>MOC</item>
        <item>PLU</item>
        <item>POO</item>
        <item>JDR</item>
        <item>UDI</item>
        <item>UBA</item>
        <item>IZA</item>
        <item>SNZ</item>
        <item>CAW</item>
        <item>CFB</item>
        <item>GIG</item>
        <item>ITP</item>
        <item>MEA</item>
        <item>QRZ</item>
        <item>SDU</item>
        <item>ARU</item>
        <item>AQA</item>
        <item>AIF</item>
        <item>QVP</item>
        <item>BAT</item>
        <item>JTC</item>
        <item>QCP</item>
        <item>BJP</item>
        <item>CPQ</item>
        <item>CGH</item>
        <item>QDC</item>
        <item>GUJ</item>
        <item>GRU</item>
        <item>FRC</item>
        <item>QDV</item>
        <item>QGC</item>
        <item>LIP</item>
        <item>MII</item>
        <item>OUS</item>
        <item>QHB</item>
        <item>PPB</item>
        <item>RAO</item>
        <item>QSC</item>
        <item>SJP</item>
        <item>SJK</item>
        <item>SOD</item>
        <item>UBT</item>
        <item>VCP</item>
        <item>VOT</item>
        <item>CAC</item>
        <item>CWB</item>
        <item>IGU</item>
        <item>LDB</item>
        <item>MGF</item>
        <item>PGZ</item>
        <item>UMU</item>
        <item>BGX</item>
        <item>CXJ</item>
        <item>PFB</item>
        <item>POA</item>
        <item>RIA</item>
        <item>URG</item>
        <item>BNU</item>
        <item>XAP</item>
        <item>CCM</item>
        <item>FLN</item>
        <item>JJG</item>
        <item>JCB</item>
        <item>JOI</item>
        <item>LAJ</item>
        <item>NVT</item>
    </string-array>
</resources>
