<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:layout_editor_absoluteY="25dp">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:importantForAccessibility="no"
            android:src="@drawable/logo" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/iata_departure_edit"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_iata"
                android:hint="@string/iata_departure"
                android:inputType="textCapCharacters"
                android:maxLength="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:hint="@string/iata_departure" />

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/iata_destination_edit"
                style="@style/edit_text"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_iata"
                android:hint="@string/iata_destination"
                android:inputType="textCapCharacters"
                android:maxLength="3"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="@+id/iata_departure_edit"
                app:layout_constraintStart_toStartOf="@+id/iata_departure_edit"
                app:layout_constraintTop_toBottomOf="@+id/iata_departure_edit"
                tools:hint="@string/iata_destination" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/departure_date_edit"
                style="@style/edit_text"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_date"
                android:hint="@string/departure_date"
                android:inputType="date"
                android:singleLine="true"
                app:layout_constraintEnd_toStartOf="@+id/arrival_date_edit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iata_destination_edit"
                tools:hint="@string/departure_date" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/arrival_date_edit"
                style="@style/edit_text"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/edit_date"
                android:hint="@string/arrival_date"
                android:inputType="date"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/departure_date_edit"
                app:layout_constraintTop_toTopOf="@+id/departure_date_edit"
                tools:hint="@string/arrival_date" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/number_of_passengers_spinner"
                style="@style/edit_text"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="16dp"
                android:background="@drawable/spinner_number_of_passengers"
                android:padding="0dp"
                app:layout_constraintEnd_toEndOf="@+id/arrival_date_edit"
                app:layout_constraintStart_toStartOf="@+id/departure_date_edit"
                app:layout_constraintTop_toBottomOf="@+id/departure_date_edit"
                tools:listitem="@layout/number_of_passengers_item" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/search_button"
                style="@style/default_button"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/ic_search"
                android:drawableStart="@drawable/ic_search"
                android:text="@string/search_flight_tickets"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/number_of_passengers_spinner"
                app:layout_constraintStart_toStartOf="@+id/number_of_passengers_spinner"
                app:layout_constraintTop_toBottomOf="@+id/number_of_passengers_spinner"
                tools:text="@string/search_flight_tickets" />
        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/progress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/overlay"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</android.support.constraint.ConstraintLayout>